# coastal-qt

./: .gitignore  CMakeLists.txt  ChangeLog  PKGBUILD.cmake  README  TODO  coastal-qt-config.h.cmake  coastal-qt.spec  coastal-qt.spec.cmake  config.h.cmake
cmake/: CoastalConfig.cmake  CoastalMacros.cmake  CoastalTargets.cmake
common/: CMakeLists.txt  about.cpp  about.ui  busy.cpp  coastal.cpp  coastal.h  coastal.qrc  coastal.ts  coastal_de.ts  coastal_es.ts  coastal_mgw.qrc  coastal_mingw.qrc  conditional.cpp  dialog.cpp  find.ui  libcoastal.pc.cmake  main.cpp  mapped.cpp  mingw.qrc  notify.cpp  view.cpp
dbus/: org.freedesktop.Notifications.xml
debian/: changelog  control  copyright  libcoastal-dev.install  rules
dialogs/: CMakeLists.txt  README  dialog.cpp  dialog.css  dialog.h  dialog.qrc  dialog_de.ts  dialog_es.ts  icons.cpp  icons.h  icons.ui
icons/: index.theme
manpager/: CMakeLists.txt  application.rc  application.rc.cmake  config.cpp  config.h  config.ui  icons.qrc  index.cpp  index.h  main.cpp  main.h  main.ui  manpager.css  manpager.desktop.cmake  manpager.h  manpager.qrc  manpager.rc.cmake  manpager.ts  manpager_de.ts  manpager_es.ts  program.h  scalable.qrc  toolbar.ui  validate.cpp  validate.h  view.cpp  view.h
notify/: CMakeLists.txt  application.rc.cmake  coastal-notify  fifo.cpp  icons.qrc  main.cpp  main.ui  multicast.cpp  notice.cpp  notice.ui  options.cpp  program.h  scalable.qrc  view.cpp
packaging/debian/: changelog  coastal-apps.install  coastal-dialogs.install  coastal-manpager.install  coastal-notify.install  coastal-qt.install  coastal-search.install  control  copyright  libcoastal-dev.install  rules  watch
qfind/: CMakeLists.txt  icons.qrc  main.cpp  main.ui  program.h
qman/: CMakeLists.txt  main.cpp  main.ui  program.h
search/: CMakeLists.txt  application.rc  application.rc.cmake  config.cpp  config.h  config.ui  find.ui  icons.qrc  index.cpp  index.h  main.cpp  main.h  main.ui  program.h  scalable.qrc  search.desktop.cmake  search.h  search.qrc  search.rc.cmake  search.ts  search_de.ts  search_es.ts  toolbar.ui  view.cpp  view.h
system/: CMakeLists.txt  coastal-manpager.desktop.cmake  coastal-search.desktop.cmake  libcoastal.pc.cmake  manpager-desktop.sh
translations/: CMakeLists.txt
